Update Bab 3 + Fitur Show & Hide Code + Icon UI

--- a/about.html
+++ b/about.html
@@ -7,17 +7,27 @@
       name="description"
       content="Tentang Project UAS Pemrograman Web 1 Kelompok 6"
     />
-    <title>Tentang - Kelompok 6</title>
+    <title>Tentang Project - Kelompok 6</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="logo">WebProg<span>6</span></div>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">Tentang</a></li>
+        <li>
+          <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        </li>
+        <li>
+          <a href="about.html" class="active"
+            ><i class="fas fa-info-circle"></i> Tentang</a
+          >
+        </li>
         <li class="dropdown">
-          <a href="#">Materi ▾</a>
+          <a href="#"><i class="fas fa-book"></i> Materi ▾</a>
           <ul class="dropdown-content">
             <li><a href="materi/bab1.html">Bab 1: Pendahuluan</a></li>
             <li><a href="materi/bab2.html">Bab 2: HTML5</a></li>
@@ -30,7 +40,9 @@
             <li><a href="materi/bab9.html">Bab 9: Tren Web</a></li>
           </ul>
         </li>
-        <li><a href="contact.html">Kontak</a></li>
+        <li>
+          <a href="contact.html"><i class="fas fa-envelope"></i> Kontak</a>
+        </li>
       </ul>
       <div class="hamburger">
         <span></span>
@@ -43,7 +55,9 @@
       <h1 class="text-center mb-2 fade-in">Tentang Project Ini</h1>
 
       <div class="card fade-in-delay-1 about-card">
-        <h2 class="about-heading-primary">📚 Deskripsi Project</h2>
+        <h2 class="about-heading-primary">
+          <i class="fas fa-graduation-cap"></i> Deskripsi Project
+        </h2>
         <p>
           Website tutorial ini dibuat sebagai bagian dari
           <strong>Project UAS Mata Kuliah Pengantar Pemrograman Web 1</strong>
@@ -59,7 +73,9 @@
       </div>
 
       <div class="card fade-in-delay-2 about-card">
-        <h2 class="about-heading-secondary">🎯 Tujuan Pembelajaran</h2>
+        <h2 class="about-heading-secondary">
+          <i class="fas fa-bullseye"></i> Tujuan Pembelajaran
+        </h2>
         <ul class="about-list-spaced">
           <li>Memahami sejarah dan arsitektur World Wide Web</li>
           <li>Menguasai HTML5 dan elemen semantik</li>
@@ -72,7 +88,9 @@
       </div>
 
       <div class="card fade-in-delay-3 about-card">
-        <h2 class="about-heading-tertiary">👥 Kelompok 6</h2>
+        <h2 class="about-heading-tertiary">
+          <i class="fas fa-users"></i> Kelompok 6
+        </h2>
         <p><strong>Universitas Pamulang</strong></p>
         <p><strong>Mata Kuliah:</strong> Pengantar Pemrograman Web 1</p>
         <p><strong>Tahun Akademik:</strong> 2024/2025</p>
@@ -146,20 +164,22 @@
       </div>
 
       <div class="card animate-on-scroll about-card">
-        <h2 class="about-heading-quaternary">💻 Teknologi yang Digunakan</h2>
+        <h2 class="about-heading-quaternary">
+          <i class="fas fa-laptop-code"></i> Teknologi yang Digunakan
+        </h2>
         <div class="tech-grid mt-2">
           <div class="card hover-scale tech-card tech-card-html">
-            <h3>🏭️</h3>
+            <h3><i class="fab fa-html5"></i></h3>
             <h4>HTML5</h4>
             <p>Struktur Semantik</p>
           </div>
           <div class="card hover-scale tech-card tech-card-css">
-            <h3>🎨</h3>
+            <h3><i class="fab fa-css3-alt"></i></h3>
             <h4>CSS3</h4>
             <p>Modern Styling</p>
           </div>
           <div class="card hover-scale tech-card tech-card-js">
-            <h3>⚡</h3>
+            <h3><i class="fab fa-js-square"></i></h3>
             <h4>JavaScript ES6+</h4>
             <p>Interaktivitas</p>
           </div>
@@ -167,7 +187,7 @@
       </div>
 
       <div class="card text-center animate-on-scroll cta-card">
-        <h2>📖 Mulai Belajar</h2>
+        <h2><i class="fas fa-play-circle"></i> Mulai Belajar</h2>
         <p>Jelajahi materi lengkap dari Bab 1 sampai Bab 9</p>
         <a href="materi/bab1.html" class="btn-primary cta-btn"
           >Mulai dari Bab 1 →</a
