--- a/index.html
+++ b/index.html
@@ -8,16 +8,26 @@
       content="Tutorial lengkap Pemrograman Web 1 - HTML, CSS, JavaScript Modern untuk pemula hingga mahir"
     />
     <title>Tutorial Web Modern - Kelompok 6</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="logo">WebProg<span>6</span></div>
       <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">Tentang</a></li>
+        <li>
+          <a href="index.html" class="active"
+            ><i class="fas fa-home"></i> Home</a
+          >
+        </li>
+        <li>
+          <a href="about.html"><i class="fas fa-info-circle"></i> Tentang</a>
+        </li>
         <li class="dropdown">
-          <a href="#">Materi ▾</a>
+          <a href="#"><i class="fas fa-book"></i> Materi ▾</a>
           <ul class="dropdown-content">
             <li><a href="materi/bab1.html">Bab 1: Pendahuluan</a></li>
             <li><a href="materi/bab2.html">Bab 2: HTML5</a></li>
@@ -30,7 +40,9 @@
             <li><a href="materi/bab9.html">Bab 9: Tren Web</a></li>
           </ul>
         </li>
-        <li><a href="contact.html">Kontak</a></li>
+        <li>
+          <a href="contact.html"><i class="fas fa-envelope"></i> Kontak</a>
+        </li>
       </ul>
       <div class="hamburger">
         <span></span>
@@ -67,7 +79,7 @@
       <div class="grid-3 homepage-cards">
         <!-- Bab 1 -->
         <div class="card hover-lift animate-on-scroll">
-          <h3>📖 Bab I</h3>
+          <h3><i class="fas fa-book-open"></i> Bab I</h3>
           <h4>Pendahuluan</h4>
           <p>Sejarah, perkembangan, dan arsitektur web modern</p>
           <a href="materi/bab1.html" class="btn-primary">Pelajari →</a>
@@ -75,7 +87,7 @@
 
         <!-- Bab 2 -->
         <div class="card hover-lift animate-on-scroll">
-          <h3>🏗️ Bab II</h3>
+          <h3><i class="fas fa-code"></i> Bab II</h3>
           <h4>HTML5</h4>
           <p>Struktur, elemen semantik, form, dan multimedia</p>
           <a href="materi/bab2.html" class="btn-primary">Pelajari →</a>
@@ -83,7 +95,7 @@
 
         <!-- Bab 3 -->
         <div class="card hover-lift animate-on-scroll">
-          <h3>🎨 Bab III</h3>
+          <h3><i class="fas fa-palette"></i> Bab III</h3>
           <h4>CSS3</h4>
           <p>Styling, Flexbox, Grid, dan animasi</p>
           <a href="materi/bab3.html" class="btn-primary">Pelajari →</a>
@@ -91,7 +103,7 @@
 
         <!-- Bab 4 -->
         <div class="card hover-lift animate-on-scroll">
-          <h3>⚡ Bab IV</h3>
+          <h3><i class="fas fa-bolt"></i> Bab IV</h3>
           <h4>JavaScript Modern</h4>
           <p>ES6+, variabel, fungsi, dan kontrol</p>
           <a href="materi/bab4.html" class="btn-primary">Pelajari →</a>
@@ -99,7 +111,7 @@
 
         <!-- Bab 5 -->
         <div class="card hover-lift animate-on-scroll">
-          <h3>🔍 Bab V</h3>
+          <h3><i class="fas fa-search"></i> Bab V</h3>
           <h4>DOM & Manipulasi</h4>
           <p>DOM manipulation dan event handling</p>
           <a href="materi/bab5.html" class="btn-primary">Pelajari →</a>
@@ -107,7 +119,7 @@
 
         <!-- Bab 6 -->
         <div class="card hover-lift animate-on-scroll">
-          <h3>📱 Bab VI</h3>
+          <h3><i class="fas fa-mobile-alt"></i> Bab VI</h3>
           <h4>Responsive Design</h4>
           <p>Media queries dan mobile-first approach</p>
           <a href="materi/bab6.html" class="btn-primary">Pelajari →</a>
@@ -115,7 +127,7 @@
 
         <!-- Bab 7 -->
         <div class="card hover-lift animate-on-scroll">
-          <h3>🔗 Bab VII</h3>
+          <h3><i class="fas fa-link"></i> Bab VII</h3>
           <h4>Integrasi HTML CSS JS</h4>
           <p>Halaman interaktif dan landing page</p>
           <a href="materi/bab7.html" class="btn-primary">Pelajari →</a>
@@ -123,7 +135,7 @@
 
         <!-- Bab 8 -->
         <div class="card hover-lift animate-on-scroll">
-          <h3>💼 Bab VIII</h3>
+          <h3><i class="fas fa-briefcase"></i> Bab VIII</h3>
           <h4>Proyek Akhir</h4>
           <p>Praktik membuat website portofolio</p>
           <a href="materi/bab8.html" class="btn-primary">Pelajari →</a>
@@ -131,7 +143,7 @@
 
         <!-- Bab 9 -->
         <div class="card hover-lift animate-on-scroll">
-          <h3>🚀 Bab IX</h3>
+          <h3><i class="fas fa-rocket"></i> Bab IX</h3>
           <h4>Tren & Perkembangan</h4>
           <p>Framework modern dan Progressive Web Apps</p>
           <a href="materi/bab9.html" class="btn-primary">Pelajari →</a>
