--- a/materi/bab6.html
+++ b/materi/bab6.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bab VI - Responsive Web Design</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="logo">WebProg<span>6</span></div>
       <ul class="nav-links">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../about.html">Tentang</a></li>
+        <li>
+          <a href="../index.html"><i class="fas fa-home"></i> Home</a>
+        </li>
+        <li>
+          <a href="../about.html"><i class="fas fa-info-circle"></i> Tentang</a>
+        </li>
         <li class="dropdown">
-          <a href="#" class="active">Materi ▾</a>
+          <a href="#" class="active"><i class="fas fa-book"></i> Materi ▾</a>
           <ul class="dropdown-content">
             <li><a href="bab1.html">Bab 1: Pendahuluan</a></li>
             <li><a href="bab2.html">Bab 2: HTML5</a></li>
@@ -26,7 +34,9 @@
             <li><a href="bab9.html">Bab 9: Tren Web</a></li>
           </ul>
         </li>
-        <li><a href="../contact.html">Kontak</a></li>
+        <li>
+          <a href="../contact.html"><i class="fas fa-envelope"></i> Kontak</a>
+        </li>
       </ul>
       <div class="hamburger"><span></span><span></span><span></span></div>
     </nav>
