Update bab 4 dan 5 fix

--- a/materi/bab3.html
+++ b/materi/bab3.html
@@ -452,29 +452,33 @@ div p {
               </thead>
               <tbody>
                 <tr>
-                  <td>Warna</td>
-                  <td>red, #ff0000, rgb(255,0,0)</td>
-                  <td>Mendefinisikan warna</td>
+                  <td data-label="Jenis Nilai">Warna</td>
+                  <td data-label="Contoh">red, #ff0000, rgb(255,0,0)</td>
+                  <td data-label="Keterangan">Mendefinisikan warna</td>
                 </tr>
                 <tr>
-                  <td>Satuan panjang</td>
-                  <td>px, em, rem, %</td>
-                  <td>Mengatur ukuran</td>
+                  <td data-label="Jenis Nilai">Satuan panjang</td>
+                  <td data-label="Contoh">px, em, rem, %</td>
+                  <td data-label="Keterangan">Mengatur ukuran</td>
                 </tr>
                 <tr>
-                  <td>Kata kunci</td>
-                  <td>center, bold, flex</td>
-                  <td>Nilai yang telah ditentukan CSS</td>
+                  <td data-label="Jenis Nilai">Kata kunci</td>
+                  <td data-label="Contoh">center, bold, flex</td>
+                  <td data-label="Keterangan">
+                    Nilai yang telah ditentukan CSS
+                  </td>
                 </tr>
                 <tr>
-                  <td>URL</td>
-                  <td>url("image.jpg")</td>
-                  <td>Biasanya untuk gambar latar</td>
+                  <td data-label="Jenis Nilai">URL</td>
+                  <td data-label="Contoh">url("image.jpg")</td>
+                  <td data-label="Keterangan">Biasanya untuk gambar latar</td>
                 </tr>
                 <tr>
-                  <td>Angka</td>
-                  <td>1, 0.5</td>
-                  <td>Dipakai pada opacity, z-index, dll</td>
+                  <td data-label="Jenis Nilai">Angka</td>
+                  <td data-label="Contoh">1, 0.5</td>
+                  <td data-label="Keterangan">
+                    Dipakai pada opacity, z-index, dll
+                  </td>
                 </tr>
               </tbody>
             </table>
@@ -1745,24 +1749,26 @@ div {
               </thead>
               <tbody>
                 <tr>
-                  <td>Dimensi</td>
-                  <td>Satu dimensi (row/column)</td>
-                  <td>Dua dimensi (row & column)</td>
+                  <td data-label="Aspek">Dimensi</td>
+                  <td data-label="Flexbox">Satu dimensi (row/column)</td>
+                  <td data-label="Grid">Dua dimensi (row & column)</td>
                 </tr>
                 <tr>
-                  <td>Kegunaan</td>
-                  <td>Menu, navbar, card horizontal</td>
-                  <td>Layout halaman, galeri, dashboard</td>
+                  <td data-label="Aspek">Kegunaan</td>
+                  <td data-label="Flexbox">Menu, navbar, card horizontal</td>
+                  <td data-label="Grid">Layout halaman, galeri, dashboard</td>
                 </tr>
                 <tr>
-                  <td>Kemudahan</td>
-                  <td>Sederhana, fleksibel</td>
-                  <td>Lebih kompleks namun lebih terstruktur</td>
+                  <td data-label="Aspek">Kemudahan</td>
+                  <td data-label="Flexbox">Sederhana, fleksibel</td>
+                  <td data-label="Grid">
+                    Lebih kompleks namun lebih terstruktur
+                  </td>
                 </tr>
                 <tr>
-                  <td>Distribusi ruang</td>
-                  <td>Sangat baik untuk item dinamis</td>
-                  <td>Sangat baik untuk layout terencana</td>
+                  <td data-label="Aspek">Distribusi ruang</td>
+                  <td data-label="Flexbox">Sangat baik untuk item dinamis</td>
+                  <td data-label="Grid">Sangat baik untuk layout terencana</td>
                 </tr>
               </tbody>
             </table>
