--- a/materi/bab6.html
+++ b/materi/bab6.html
@@ -928,10 +928,7 @@ body {
               </ul>
             </div>
 
-            <div
-              class="highlight-box"
-              style="background: #fff3cd; border-left: 4px solid #ffc107"
-            >
+            <div class="highlight-warning">
               <h4>
                 <i class="fas fa-exclamation-triangle"></i> Catatan Penting:
               </h4>
