--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!--
+Nama File    : index.html
+Tanggal      : 3 Januari 2026
+Kelas        : 05TPLP017
+Kelompok     : 6
+Anggota      : - Aufa Wafi Dhaifullah (231011401814)
+               - Fadlan Lesmana (231011400735)
+               - Ivandhika Satria Putra Ferdianto (231011401818)
+Deskripsi    : Homepage website tutorial Pemrograman Web 1
+               dengan hero section dan overview materi pembelajaran
+-->
 <!DOCTYPE html>
 <html lang="id">
   <head>
@@ -38,6 +49,7 @@
             <li><a href="materi/bab7.html">Bab 7: Integrasi</a></li>
             <li><a href="materi/bab8.html">Bab 8: Proyek</a></li>
             <li><a href="materi/bab9.html">Bab 9: Tren Web</a></li>
+            <li><a href="materi/pustaka.html">Pustaka</a></li>
           </ul>
         </li>
         <li>
