--- a/materi/bab1.html
+++ b/materi/bab1.html
@@ -1,3 +1,14 @@
+<!--
+Nama File    : bab1.html
+Tanggal      : 3 Januari 2026
+Kelas        : 05TPLP017
+Kelompok     : 6
+Anggota      : - Aufa Wafi Dhaifullah (231011401814)
+               - Fadlan Lesmana (231011400735)
+               - Ivandhika Satria Putra Ferdianto (231011401818)
+Deskripsi    : Materi Bab 1 - Pendahuluan Pemrograman Web
+               Berisi sejarah dan perkembangan teknologi web
+-->
 <!DOCTYPE html>
 <html lang="id">
   <head>
@@ -36,6 +47,7 @@
             <li><a href="bab7.html">Bab 7: Integrasi</a></li>
             <li><a href="bab8.html">Bab 8: Proyek</a></li>
             <li><a href="bab9.html">Bab 9: Tren Web</a></li>
+            <li><a href="pustaka.html">Daftar Pustaka</a></li>
           </ul>
         </li>
         <li>
