--- a/materi/bab4.html
+++ b/materi/bab4.html
@@ -1,3 +1,14 @@
+<!--
+Nama File    : bab4.html
+Tanggal      : 3 Januari 2026
+Kelas        : 05TPLP017
+Kelompok     : 6
+Anggota      : - Aufa Wafi Dhaifullah (231011401814)
+               - Fadlan Lesmana (231011400735)
+               - Ivandhika Satria Putra Ferdianto (231011401818)
+Deskripsi    : Materi Bab 4 - JavaScript Programming
+               Variabel, tipe data, fungsi, dan kontrol program ES6+
+-->
 <!DOCTYPE html>
 <html lang="id">
   <head>
@@ -32,6 +43,7 @@
             <li><a href="bab7.html">Bab 7: Integrasi</a></li>
             <li><a href="bab8.html">Bab 8: Proyek</a></li>
             <li><a href="bab9.html">Bab 9: Tren Web</a></li>
+            <li><a href="pustaka.html">Daftar Pustaka</a></li>
           </ul>
         </li>
         <li>
